# _example_/docs/swagger.json
@@ -34,6 +34,12 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.HttpSuccess"
+                        }
+                    },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
@@ -73,6 +79,7 @@
             }
         },
         "main.HttpError": {
+            "description": "Error response",
             "type": "object",
             "properties": {
                 "code": {
@@ -82,6 +89,23 @@
                 "message": {
                     "type": "string",
                     "example": "bad request"
+                }
+            }
+        },
+        "main.HttpSuccess": {
+            "description": "Success Response",
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 200
+                },
+                "iframe": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Success"
                 }
             }
         },
